--- a/index.mdx
+++ b/index.mdx
@@ -1,71 +1,94 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: FunBypass Solver API
+description: "Fast, reliable FunCaptcha solving — starting at $0.75/1k solves."
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+## Welcome to FunBypass
 
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
+FunBypass is a high-performance CAPTCHA solving API built for developers. Submit a task, poll for the result, and get a valid token — it's that simple.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Quickstart"
+    icon="rocket"
+    href="/getting-started/quickstart"
   >
-    Get your docs set up locally for easy development
+    Get your first CAPTCHA solved in under 5 lines of code.
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
+    title="API Reference"
+    icon="square-terminal"
+    href="/api-reference/overview"
   >
-    Preview your changes before you push to make sure they're perfect
+    Full endpoint documentation with request/response schemas.
+  </Card>
+  <Card
+    title="Task Lifecycle"
+    icon="arrows-spin"
+    href="/guides/task-lifecycle"
+  >
+    Understand how tasks flow from creation to completion.
+  </Card>
+  <Card
+    title="SDKs & Examples"
+    icon="code"
+    href="/sdks/python"
+  >
+    Ready-to-use code in Python, JavaScript, and cURL.
   </Card>
 </CardGroup>
 
-## Make it yours
+## Key Features
 
-Update your docs to your brand and add valuable content for the best user conversion.
+<CardGroup cols={3}>
+  <Card title="Fast Solving" icon="bolt">
+    Average solve times under 10 seconds with parallel processing.
+  </Card>
+  <Card title="99.9% Uptime" icon="signal">
+    Redundant infrastructure with real-time status monitoring.
+  </Card>
+  <Card title="Simple Pricing" icon="tag">
+    Pay-as-you-go at **$0.75 per 1,000 solves** or subscribe to a package.
+  </Card>
+</CardGroup>
+
+## Base URL
+
+All API requests are made to:
+
+```
+https://api.funbypass.com
+```
+
+## How It Works
+
+<Steps>
+  <Step title="Create a Task">
+    Send a `POST /createTask` request with your API key, target site public key, proxy, and optional parameters.
+  </Step>
+  <Step title="Poll for Result">
+    Use `GET /getTaskResult/{taskId}` to check the task status. The task will be `processing` until the CAPTCHA is solved.
+  </Step>
+  <Step title="Get Your Token">
+    Once the status is `ready`, the response includes the solved Arkose token you can use on the target site.
+  </Step>
+</Steps>
+
+## Need Help?
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Dashboard"
+    icon="gauge"
+    href="https://app.funbypass.com"
   >
-    Customize your docs to your company's colors and brands
+    Manage your API keys, view usage stats, and monitor balance.
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    title="Discord"
+    icon="discord"
+    href="https://discord.gg/funbypass"
   >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+    Join our community for support and updates.
   </Card>
 </CardGroup>
