--- a/api-reference/get-balance.mdx
+++ b/api-reference/get-balance.mdx
@@ -94,5 +94,5 @@ curl -X POST https://api.funbypass.com/getBalance \
 </CodeGroup>
 
 <Note>
-  Balance reflects the last synced value. Pending deductions and refunds are batched every 30 seconds.
+  Balance reflects the most recent synced value. Pending deductions and refunds may take a moment to be reflected.
 </Note>
