--- a/getting-started/authentication.mdx
+++ b/getting-started/authentication.mdx
@@ -35,7 +35,7 @@ Every API request requires your `clientKey` in the request body:
 }
 ```
 
-The server validates your key against the database and checks:
+The server validates your key and checks:
 
 1. **Key existence** — The key must be registered
 2. **Account status** — Account must not be suspended
