--- a/guides/supported-captchas.mdx
+++ b/guides/supported-captchas.mdx
@@ -15,7 +15,6 @@ Multiple-choice image selection challenges. The user is shown a prompt and must 
 
 - **Waves:** 1–5 per challenge
 - **Layout:** Grid-based with multiple options
-- **Example variants:** Various image classification tasks
 
 ### Game Type 4 — 3D Interactive
 
@@ -29,21 +28,17 @@ Interactive 3D challenges that require object manipulation.
 
 ### Silent Pass
 
-Some sessions receive a **silent pass** — no challenge is required. The token is returned immediately with `sup=1` in the token string. This is the fastest resolution path and requires no image classification.
+Some sessions receive a **silent pass** — no challenge is required. The token is returned immediately with `sup=1` in the token string. This is the fastest resolution path.
 
 ## How It Works
 
-1. The API generates a session with the target site's public key
-2. Arkose Labs decides whether to issue a challenge or a silent pass
-3. If a challenge is issued, our AI classifies each image and submits answers
+1. You submit a task with the target site's public key and a proxy
+2. The API generates a session with the target site
+3. If a challenge is issued, it is solved automatically
 4. The solved token is returned to you
 
-## Template Support
-
-FunBypass maintains a database of **4,440+ Arkose templates** covering a wide range of target sites. Templates are matched by `websitePublicKey` and contain the configuration needed to generate valid sessions.
-
 <Info>
-  If you receive `ERROR_TEMPLATE_NOT_FOUND`, the target site's public key may not be in our database yet. Contact support to request it.
+  If you receive `ERROR_TEMPLATE_NOT_FOUND`, the target site's public key may not be supported yet. Contact support to request it.
 </Info>
 
 ## Task Parameters
