--- a/guides/task-lifecycle.mdx
+++ b/guides/task-lifecycle.mdx
@@ -19,26 +19,19 @@ Every solve request follows a predictable lifecycle. Understanding this flow hel
     - Task type must be `FunCaptchaTask`
     - Public key must be a valid UUID
     - Proxy format and port validation
-    - Website template lookup
-    - Thread limit check (for balance-based users)
-  </Step>
-  <Step title="Fingerprint Generation">
-    A realistic browser fingerprint is selected or generated. Fingerprints are rotated every 7–10 solves to avoid detection. If you provide custom headers (User-Agent, etc.), the fingerprint is matched accordingly.
+    - Thread limit check
   </Step>
   <Step title="Session Initialization">
-    A TLS session is created through your proxy. The system fetches IP geolocation data to set the correct timezone and language, then generates the initial Arkose token.
+    A session is created through your proxy. The system detects the proxy's geolocation to set the correct timezone and language, then generates the initial Arkose token.
   </Step>
   <Step title="Silent Pass Check">
     If the Arkose token contains `sup=1`, no challenge is required — the token is returned immediately. This is the fastest path.
   </Step>
   <Step title="Challenge Solving">
-    If a challenge is required, the system:
-    1. Parses the challenge type, variant, and number of waves
-    2. For each wave: downloads the image, classifies it via AI, and submits the answer
-    3. Repeats until all waves are solved or a timeout occurs
+    If a challenge is required, the system parses the challenge type, variant, and number of waves, then solves each wave until completion or timeout.
   </Step>
   <Step title="Result Available">
-    Once solved, the result is stored with a 60-second TTL. Poll `GET /getTaskResult/{taskId}` to retrieve it.
+    Once solved, the result is stored with a 120-second TTL. Poll `GET /getTaskResult/{taskId}` to retrieve it.
   </Step>
 </Steps>
 
@@ -57,11 +50,10 @@ Every solve request follows a predictable lifecycle. Understanding this flow hel
 |-------|---------|
 | Total task | 300 seconds |
 | Solve phase | 120 seconds |
-| Image classification | 10 seconds per image |
-| Result TTL | 60 seconds after completion |
+| Result TTL | 120 seconds after completion |
 
 <Warning>
-  Results expire 60 seconds after completion. Make sure to poll frequently enough to retrieve your token before it expires.
+  Results expire 120 seconds after completion. Make sure to poll frequently enough to retrieve your token before it expires.
 </Warning>
 
 ## Balance & Refunds
@@ -70,16 +62,16 @@ For balance-based users (`FUN-` keys):
 
 - Balance is deducted when the task starts processing
 - If the task fails for any reason (proxy error, timeout, unsolvable), the balance is **automatically refunded**
-- Refunds are processed in batches every 30 seconds
 
 ## Polling Best Practices
 
 <Tip>
-  Poll every **3 seconds** for optimal results. Polling too frequently wastes resources; polling too slowly risks missing the result TTL.
+  Poll every **0.5 seconds** for optimal results. Polling too slowly risks missing the result TTL.
 </Tip>
 
 ```python
 import time
+import requests
 
 def solve_captcha(client_key, task_params):
     # Create task
@@ -89,8 +81,8 @@ def solve_captcha(client_key, task_params):
     })
     task_id = resp.json()["taskId"]
 
-    # Poll with 3s interval
-    for _ in range(100):  # max ~5 minutes
+    # Poll with 0.5s interval
+    for _ in range(600):  # max ~5 minutes
         result = requests.get(f"https://api.funbypass.com/getTaskResult/{task_id}").json()
 
         if result["status"] == "ready":
@@ -99,7 +91,7 @@ def solve_captcha(client_key, task_params):
             else:
                 raise Exception(result["errorCode"])
 
-        time.sleep(3)
+        time.sleep(0.5)
 
     raise TimeoutError("Task did not complete in time")
 ```
